# aether-compiler-codex

./: .gitignore  CHANGELOG.md  README.md  book.md  book.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
aether/: __init__.py  ast_nodes.py  cli.py  codegen.py  datapack_builder.py  diagnostics.py  errors.py  lexer.py  optimizer.py  optimizer_ir.py  parser.py  semantic.py  symbol_table.py  tokens.py  type_checker.py
aether-compiler-main/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  book.md  main.py  pyproject.toml
aether-compiler-main/aether/: __init__.py  cli.py  codegen.py  datapack_builder.py  errors.py  lexer.py  optimizer.py  optimizer_ir.py  parser.py  semantic.py  tokens.py  type_checker.py
aether-compiler-main/docs/: PUBLISHING.md
aether-compiler-main/examples/basic/: main.ae
aether-compiler-main/examples/combat_system/: main.ae
aether-compiler-main/examples/custom_recipe/: main.ae
aether-compiler-main/examples/custom_recipe/data/recipes/recipe/: aether_torch.json
aether-compiler-main/examples/execute_blocks/: main.ae
aether-compiler-main/tests/: test_js_bolt_syntax.py
aether_compiler.egg-info/: PKG-INFO  SOURCES.txt
projects/: main.ae
