[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-compiler"
version = "3.1.0"
description = "Aether Programming Language: a JavaScript/Bolt-style language for Minecraft 1.21+ datapacks."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Aether contributors" }
]
keywords = ["minecraft", "datapack", "compiler", "mcfunction", "aether"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
]
dependencies = []

[project.scripts]
aether = "aether.cli:main"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/torbenn211/aether-compiler"
Repository = "https://github.com/torbenn211/aether-compiler"
Issues = "https://github.com/torbenn211/aether-compiler/issues"

[tool.setuptools.packages.find]
include = ["aether*"]
